prep-html-syntax

--- a/prep-html-syntax/index.html
+++ b/prep-html-syntax/index.html
@@ -5,9 +5,9 @@
 </head>
 <body>
 
-<h1 style="color: red;">My favorite Star Wars character is Princess Leia</h1>
-<img src="https://media.timeout.com/images/101902665/750/562/image.jpg" width="750" alt="Princess Leia">
-<p style="color: goldenrod;">She was a woman in a man's universe who stood her ground at every turn. She was willing to risk everything for the cause she believes in.</p>
+<h1 style="color: darkred;">My favorite Star Wars character is Princess Leia</h1>
+<img src="http://4.bp.blogspot.com/-iBZU-gUt5dY/UBlzpnabRCI/AAAAAAAAAas/DHgCgTlxsIc/s1600/Princess+Leia+1.jpg" width="750" alt="Princess Leia">
+<p style="color: darkolivegreen;">She was a strong woman in a man's universe who stood her ground at every turn. She was fearless.</p>
 
 </body>
 
